# Ninjapay_v6-

./: .dockerignore  .env.example  .gitignore  docker-compose.dev.yaml  docker-compose.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
apps/unified-dashboard/: Dockerfile  next.config.js  package.json  tailwind.config.ts
apps/unified-dashboard/src/app/: layout.tsx  page.tsx
apps/unified-dashboard/src/components/: providers.tsx
apps/unified-dashboard/src/hooks/: useAuth.ts
apps/unified-dashboard/src/lib/: api.ts  utils.ts
apps/unified-dashboard/src/stores/: auth.ts
programs/ninjapay-vault/: Anchor.toml  Cargo.toml
programs/ninjapay-vault/src/: lib.rs
services/api-gateway/: Dockerfile  openapi.yaml  package.json  vitest.arcium.config.ts  vitest.config.ts
services/api-gateway/scripts/: test-arcium.sh
services/api-gateway/src/: index.ts
services/api-gateway/src/middleware/: authenticate.ts  error-handler.ts  rate-limiter-advanced.ts  rate-limiter.ts  request-logger.ts
services/api-gateway/src/routes/: api-keys.ts  arcium-callbacks.ts  auth.ts  checkout.ts  health.ts  payment-intents.ts  payment-links.ts  payroll.ts  webhooks.ts
services/api-gateway/src/services/: arcium-client.ts  settlement.ts  webhook-delivery.ts
services/api-gateway/tests/: arcium-integration.test.ts  payment-intents.test.ts  payment-links.test.ts  setup.ts
services/arcium-service/: Cargo.toml
services/arcium-service/src/: config.rs  error.rs  handlers.rs  main.rs  routes.rs
services/arcium-service/src/mpc/: client.rs  encryption.rs  mod.rs
(+18 files in other folders)
