[package]
name = "ninjapay-vault"
version = "2.0.0"
description = "NinjaPay Vault - Confidential payment settlement on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ninjapay_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "1.17"
solana-sdk = "1.17"
