[package]
name = "arcium-service"
version = "2.0.0"
edition = "2021"
authors = ["NinjaPay Team"]
description = "Arcium MPC Service for NinjaPay confidential payments"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7"
actix-rt = "2.9"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.21"

# Solana
solana-sdk = "1.17"
solana-client = "1.17"
bs58 = "0.5"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Environment
dotenvy = "0.15"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
